--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,8 @@
-# Need Django<1.7 due to a Haystack conflict
-Django<1.7
-South==1.0
-
-# Developing
-Werkzeug==0.9.6
-django-debug-toolbar==1.2.1
-django-extensions==1.2
-
-# We force this to avoid a conflict with django-extra-views
-six==1.5.2
-
 # Testing
-mock==1.0.1
-django-nose==1.1
-spec==0.11.1
-coverage==3.7.1
-django-dynamic-fixture==1.8.0
-freezegun==0.1.19
-Babel==1.3
-tox==1.8.0
+mock==2.0.0
+django-nose==1.4.4
+spec==1.4.0
+coverage==4.4.1
+django-dynamic-fixture
+tox==2.7.0
 django-localflavor==1.0
