--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 mock==2.0.0
 django-nose==1.4.4
 django-oscar==1.4
+django-widget-tweaks==1.4.1
 spec==1.4.0
 coverage==4.4.1
 django-dynamic-fixture
